2004-01-20  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opannotate.1.in:
	* doc/opgprof.1.in:
	* doc/opreport.1.in:
	* doc/oprofile.xml:
	* doc/opstack.1.in: document --verbose options a bit
	* libutil++/cverb.cpp:
	* libutil++/cverb.h:
	* pp/common_option.cpp: remove vstats and vlevel2 verbose objects

2004-01-20  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/cverb.h:
	* libutil++/cverb.cpp: new cverb handling. most interresting are
	  --verbose=sfile,bfd,level1 resp. sample filename handling bfd
	  handling and more verbosity (only for bfd actually)

	* pp/opgprof.cpp: controlled by --verbose==bfd, add level1 to get
	  verbose symbols.
	* libpp/callgraph_container.cpp:
	* libutil++/op_bfd.cpp:
	* pp/common_option.cpp:
	* pp/opannotate_options.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport_options.cpp:
	* pp/opstack_options.cpp: use it

2004-01-19  John Levon  <levon@movementarian.org>

	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp: rename caller_callee_recorder
	to arc_recorder.

	* doc/CodingStyle: mention trailing comments

	* utils/opcontrol: fix formatting. Error if --note-table-size
	is passed on 2.6 kernels.

2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_debug.c: fix build on alpha
	* libpp/callgraph_container.cpp: missing std:: in header

2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.cpp: Obviously not2(weak_ordering_function)
	  is not a weak_ordering function leading to mysterious segfault
	  during sort.

2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opstack.1.in: new file, describe opstack usage
	* doc/oprofile.xml: describe opstack

2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: Don't fix symbol offset for symbol definition
	  coming from the original file. A corner case remain broken: symbols
	  definition coming from debug file and belonging to another section
	  than .text are incorrecttly offseted.
